force-app/main/default/objects/genesis__Applications__c/fields/genesis__Interest_Compounding_Frequency__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interest_Compounding_Frequency__c</fullName>
    <description>Interest compounding frequency can be used to calculate Interest with Compound Interest as calculation method for the respective frequency selected.</description>
    <inlineHelpText>Interest compounding frequency can be used to calculate Interest with Compound Interest as calculation method for the respective frequency selected.</inlineHelpText>
    <label>Interest Compounding Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Billing Frequency</fullName>
                <default>true</default>
                <label>Billing Frequency</label>
            </value>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
                <isActive>false</isActive>
                <label>Bi-Monthly</label>
            </value>
            <value>
                <fullName>Daily</fullName>
                <isActive>false</isActive>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
                <isActive>false</isActive>
                <label>Semi-Annual</label>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
                <isActive>false</isActive>
                <label>Semi-Monthly</label>
            </value>
            <value>
                <fullName>Semi-Monthly-PD</fullName>
                <isActive>false</isActive>
                <label>Semi-Monthly-PD</label>
            </value>
            <value>
                <fullName>Single-Payment</fullName>
                <isActive>false</isActive>
                <label>Single-Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>