force-app/main/default/objects/genesis__Applications__c/fields/genesis__Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interest_Level__c</fullName>
    <label>Interest Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>genesis__Interest_Level</valueSetName>
    </valueSet>
</CustomField>