force-app/main/default/objects/genesis__Applications__c/fields/genesis__Is_Indirect__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_Indirect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to support indirect lending and leasing.</description>
    <inlineHelpText>This field is to support indirect lending and leasing.</inlineHelpText>
    <label>Is Indirect</label>
    <type>Checkbox</type>
</CustomField>