force-app/main/default/objects/genesis__Applications__c/fields/genesis__Is_Renewal__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will determine if the application is a renewal application. It will be populated based on the renewal transaction.</description>
    <inlineHelpText>This checkbox will determine if the application is a renewal application. It will be populated based on the renewal transaction.</inlineHelpText>
    <label>Is Renewal</label>
    <type>Checkbox</type>
</CustomField>