force-app/main/default/objects/genesis__Applications__c/fields/genesis__Is_Secured__c.field-meta.xml
<CustomField>
    <fullName>genesis__Is_Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will identify if the loan is a secured loan</description>
    <inlineHelpText>This checkbox will identify if the loan is a secured loan</inlineHelpText>
    <label>Is Secured</label>
    <type>Checkbox</type>
</CustomField>