force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Application_Type__c</fullName>
    <description>This field is to identify specific application types that are needed for generation of closing documents.</description>
    <inlineHelpText>This field is to identify specific application types that are needed for generation of closing documents.</inlineHelpText>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Installment</fullName>
            </value>
            <value>
                <fullName>Loan Modification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Indirect Installment</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Mortgage Loan</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>Single Payment</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Loan Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>