force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Decision_Date__c</fullName>
    <description>This date is to record the date on which the loan decision has been made.This date must be updated via salesforce approval process or via other methods when the loan status is either approved or rejected.</description>
    <inlineHelpText>This date is to record the date on which the loan decision has been made.This date must be updated via salesforce approval process or via other methods when the loan status is either approved or rejected.</inlineHelpText>
    <label>Loan Decision Date</label>
    <type>Date</type>
</CustomField>