force-app/main/default/objects/genesis__Applications__c/fields/genesis__Loan_Term_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Loan_Term_Type__c</fullName>
    <description>This field is to identify if the loan is an open ended or closed ended loan.</description>
    <inlineHelpText>This field is to identify if the loan is an open ended or closed ended loan.</inlineHelpText>
    <label>Loan Term Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Ended</fullName>
            </value>
            <value>
                <fullName>Closed Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>