force-app/main/default/objects/genesis__Applications__c/fields/genesis__LOC_Fixed_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__LOC_Fixed_Payment_Amount__c</fullName>
    <description>This field is to store the fixed payment amount that is applicable when the &quot;LOC Fixed payment Type&quot; has the following picklist values

1) Fixed Amount + accrued interest
2) Fixed Amount
3) Fixed Amount per $1000 of outstanding balance
4) Fixed fraction of outstanding principal balance + accrued interest
5) Greater of fixed amount or accrued interest</description>
    <label>LOC Fixed Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>