force-app/main/default/objects/genesis__Applications__c/fields/genesis__LTV__c.field-meta.xml
<CustomField>
    <fullName>genesis__LTV__c</fullName>
    <description>This field stores Loan to Value Ratio</description>
    <inlineHelpText>This field depicts Loan to Value Ratio</inlineHelpText>
    <label>Loan to Value Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>