force-app/main/default/objects/genesis__Applications__c/fields/genesis__No_Of_Payments_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>genesis__No_Of_Payments_In_Advance__c</fullName>
    <description>This field captures the no.of payments that the lessee will pay along with the first payment</description>
    <label>No Of Payments In Advance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1ST AND LAST</fullName>
                <label>First and Last</label>
            </value>
            <value>
                <fullName>1ST AND LAST2</fullName>
                <label>First and Last 2</label>
            </value>
            <value>
                <fullName>1ST AND LAST3</fullName>
                <label>First and Last 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>