force-app/main/default/objects/genesis__Applications__c/fields/genesis__Notarization_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Notarization_Date__c</fullName>
    <description>This Date field will be used to store the notarization date. This is the date on which the acknowledgment was performed and the notary public has signed the acknowledgment.</description>
    <inlineHelpText>This is the date on which the acknowledgment was performed and the notary public has signed the acknowledgment.</inlineHelpText>
    <label>Notarization Date</label>
    <type>Date</type>
</CustomField>