force-app/main/default/objects/genesis__Applications__c/fields/genesis__Notes__c.field-meta.xml
<CustomField>
    <fullName>genesis__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>