force-app/main/default/objects/genesis__Applications__c/fields/genesis__Payable_On_Demand__c.field-meta.xml
<CustomField>
    <fullName>genesis__Payable_On_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will determine if the loan is payable on demand.</description>
    <inlineHelpText>This checkbox will determine if the loan is payable on demand.</inlineHelpText>
    <label>Payable on Demand</label>
    <type>Checkbox</type>
</CustomField>