force-app/main/default/objects/genesis__Applications__c/fields/genesis__Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>genesis__Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>genesis__Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>WEEKLY</fullName>
            </value>
            <value>
                <fullName>BI-WEEKLY</fullName>
            </value>
            <value>
                <fullName>MONTHLY</fullName>
                <default>true</default>
                <label>MONTHLY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>