force-app/main/default/objects/genesis__Applications__c/fields/genesis__Percentage_Of_Outstanding_Principal__c.field-meta.xml
<CustomField>
    <fullName>genesis__Percentage_Of_Outstanding_Principal__c</fullName>
    <description>This field will store the percentage of outstanding that needs to be repaid as part of the LOC repayment. This field is applicable only if LOC Payment Type is any of the following:

Fixed fraction of outstanding principal balance
Greater of a percentage of the outstanding balance or a Dollar Amount
Greater of a percentage of the outstanding balance plus accrued interest or a Dollar Amount
Greater of a percentage  of the outstanding balance or accrued interest.
Percentage of the outstanding balance
Percentage of the outstanding balance plus accrued interest</description>
    <inlineHelpText>This field will store the percentage of outstanding that needs to be repaid as part of the LOC repayment.</inlineHelpText>
    <label>Percentage of Outstanding Principal (LOC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>