force-app/main/default/objects/genesis__Applications__c/fields/genesis__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LEASE</fullName>
            </value>
            <value>
                <fullName>LOAN</fullName>
                <default>true</default>
                <label>LOAN</label>
            </value>
            <value>
                <fullName>LINE OF CREDIT</fullName>
            </value>
            <value>
                <fullName>PACKAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>