force-app/main/default/objects/genesis__Applications__c/fields/genesis__Program__c.field-meta.xml
<CustomField>
    <fullName>genesis__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the Vendor program for which the application is created</description>
    <inlineHelpText>This field is a lookup to the Vendor program for which the application is created</inlineHelpText>
    <label>Program</label>
    <referenceTo>clcommon__Program__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>