force-app/main/default/objects/genesis__Applications__c/fields/genesis__Proposed_Monthly_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Proposed_Monthly_Payment_Amount__c</fullName>
    <description>This field will contain the total monthly payment amount from all liabilities of all borrowers+ the proposed monthly payment amount of the current application</description>
    <inlineHelpText>This field will contain the total monthly payment amount from all liabilities of all borrowers+ the proposed monthly payment amount of the current application</inlineHelpText>
    <label>Proposed Monthly Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>