force-app/main/default/objects/genesis__Applications__c/fields/genesis__Proposed_Repayment_Capacity__c.field-meta.xml
<CustomField>
    <fullName>genesis__Proposed_Repayment_Capacity__c</fullName>
    <description>This field represents the proposed repayment capacity of all the borrower parties to repay in term of monthly loan payment considering the ongoing loan application</description>
    <inlineHelpText>This field represents the proposed repayment capacity of all the borrower parties to repay in term of monthly loan payment considering the ongoing loan application</inlineHelpText>
    <label>Proposed Repayment Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>