force-app/main/default/objects/genesis__Applications__c/fields/genesis__Rate_Lock__c.field-meta.xml
<CustomField>
    <fullName>genesis__Rate_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field denotes whether the rate for first rate schedule on application is locked or not.</description>
    <inlineHelpText>This field denotes whether the rate for first rate schedule on application is locked or not.</inlineHelpText>
    <label>Rate Lock</label>
    <type>Checkbox</type>
</CustomField>