force-app/main/default/objects/genesis__Applications__c/fields/genesis__Rate_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Rate_Lock_Date__c</fullName>
    <description>This field stores the date on which interest rate is locked on the application.</description>
    <inlineHelpText>This field stores the date on which interest rate is locked on the application.</inlineHelpText>
    <label>Rate Lock Date</label>
    <type>Date</type>
</CustomField>