force-app/main/default/objects/genesis__Applications__c/fields/genesis__Rate_Lock_Period__c.field-meta.xml
<CustomField>
    <fullName>genesis__Rate_Lock_Period__c</fullName>
    <description>This field is used to capture the period for which interest rate on rate schedule will be locked.</description>
    <inlineHelpText>This field is used to capture the period for which interest rate on rate schedule will be locked.</inlineHelpText>
    <label>Rate Lock Period (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>