force-app/main/default/objects/genesis__Applications__c/fields/genesis__Rate_Lock_Validity_Period__c.field-meta.xml
<CustomField>
    <fullName>genesis__Rate_Lock_Validity_Period__c</fullName>
    <description>This field stores the validity period for rate lock on the application.</description>
    <inlineHelpText>This field stores the validity period for rate lock on the application.</inlineHelpText>
    <label>Rate Lock Validity Period (in Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>