force-app/main/default/objects/genesis__Applications__c/fields/genesis__Rate_Revision_Frequency__c.field-meta.xml
<CustomField>
    <fullName>genesis__Rate_Revision_Frequency__c</fullName>
    <description>This field defines the frequency at which the index needs to be refreshed on the contract</description>
    <inlineHelpText>This field defines the frequency at which the index needs to be refreshed on the contract</inlineHelpText>
    <label>Rate Revision Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>