force-app/main/default/objects/genesis__Applications__c/fields/genesis__Reg_O_Purpose__c.field-meta.xml
<CustomField>
    <fullName>genesis__Reg_O_Purpose__c</fullName>
    <description>Reg O purpose captures the purpose for which the loan is being applied for by the employee/insder. This information will be required when the Regulation O field IS NOT NULL and/or Employee Loan = TRUE.</description>
    <inlineHelpText>Reg O purpose captures the purpose for which the loan is being applied for by the employee/insder.</inlineHelpText>
    <label>Reg O Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educational Purpose</fullName>
            </value>
            <value>
                <fullName>Residential Purpose</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>