force-app/main/default/objects/genesis__Applications__c/fields/genesis__Repayment_Procedure__c.field-meta.xml
<CustomField>
    <fullName>genesis__Repayment_Procedure__c</fullName>
    <label>Repayment Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equal Monthly Installments</fullName>
                <default>true</default>
                <label>Equal Monthly Installments</label>
            </value>
            <value>
                <fullName>Equated Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>