force-app/main/default/objects/genesis__Applications__c/fields/genesis__Requested_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Requested_Loan_Amount__c</fullName>
    <description>This field keeps the information of requested loan amount at the time of application creation</description>
    <inlineHelpText>This field keeps the information of requested loan amount at the time of application creation</inlineHelpText>
    <label>Requested Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>