force-app/main/default/objects/genesis__Applications__c/fields/genesis__Secondary_Purpose__c.field-meta.xml
<CustomField>
    <fullName>genesis__Secondary_Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use to store Secondary Purpose of Application</description>
    <label>Secondary Purpose</label>
    <referenceTo>clcommon__CL_Purpose__c</referenceTo>
    <relationshipLabel>Applications (Secondary Purpose)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>