force-app/main/default/objects/genesis__Applications__c/fields/genesis__Skip_Usage_On_Parent_Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Skip_Usage_On_Parent_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then this application will not be considered in computing values on the associated Credit Line or Package application.</description>
    <inlineHelpText>If true, then this application will not be considered in computing values on the associated Credit Line or Package application.</inlineHelpText>
    <label>Skip Usage On Parent Application</label>
    <type>Checkbox</type>
</CustomField>