force-app/main/default/objects/genesis__Applications__c/fields/genesis__Solve_For__c.field-meta.xml
<CustomField>
    <fullName>genesis__Solve_For__c</fullName>
    <description>Based on this filed the yield for various Payment Schedule should be calculated</description>
    <label>Solve For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yield</fullName>
            </value>
            <value>
                <fullName>Payment Amount</fullName>
            </value>
            <value>
                <fullName>Financed Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>