force-app/main/default/objects/genesis__Applications__c/fields/genesis__Solved_For__c.field-meta.xml
<CustomField>
    <fullName>genesis__Solved_For__c</fullName>
    <description>Based on this filed the yield for various Payment Schedule should be calculated</description>
    <label>Solved For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yield and Yield after Payout</fullName>
            </value>
            <value>
                <fullName>Payment Amount</fullName>
            </value>
            <value>
                <fullName>Financed Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>