force-app/main/default/objects/genesis__Applications__c/fields/genesis__Spousal_Notice__c.field-meta.xml
<CustomField>
    <fullName>genesis__Spousal_Notice__c</fullName>
    <description>This field will store the notification type of the notice that needs to be sent to the spouse of the borrower in the loan application.</description>
    <inlineHelpText>This field will store the notification type of the notice that needs to be sent to the spouse of the borrower in the loan application.</inlineHelpText>
    <label>Spousal Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A copy of the document evidencing extension of credit</fullName>
            </value>
            <value>
                <fullName>A copy of the credit disclosure given to Applicant</fullName>
            </value>
            <value>
                <fullName>No enclosure is included with Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>