force-app/main/default/objects/genesis__Applications__c/fields/genesis__Status__c.field-meta.xml
<CustomField>
    <fullName>genesis__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>App Received</fullName>
                <default>true</default>
                <label>App Received</label>
            </value>
            <value>
                <fullName>App Processed</fullName>
            </value>
            <value>
                <fullName>Conditional Assessed</fullName>
            </value>
            <value>
                <fullName>Conditionally Approved</fullName>
            </value>
            <value>
                <fullName>Conditional Accepted</fullName>
            </value>
            <value>
                <fullName>Assessment in Progress</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Formally Approved</fullName>
            </value>
            <value>
                <fullName>Solicitor Instructed</fullName>
            </value>
            <value>
                <fullName>LOO Issued</fullName>
            </value>
            <value>
                <fullName>LOO Accepted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved - Converted to Contract</fullName>
            </value>
            <value>
                <fullName>Loan Settled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>