force-app/main/default/objects/genesis__Applications__c/fields/genesis__Tax_Deferral_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Tax_Deferral_Payment_Date__c</fullName>
    <description>This field here to specify the exact date on which the deferred tax payment is to be collected.</description>
    <label>Tax Deferral Payment Date</label>
    <type>Date</type>
</CustomField>