force-app/main/default/objects/genesis__Applications__c/fields/genesis__Tax_Deferral_Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>genesis__Tax_Deferral_Payment_Period__c</fullName>
    <description>On the basis of this field  &quot;Tax Amount&quot; can be calculated.</description>
    <label>Tax Deferral Payment Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>