force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Assets__c</fullName>
    <description>This field will store the rollup summary of all the borrower&apos;s Assets(sum of Market Value). This is from asset information.</description>
    <inlineHelpText>This field will store the rollup summary of all the borrower&apos;s Assets(sum of Market Value). This is from asset information.</inlineHelpText>
    <label>Total Assets</label>
    <summarizedField>genesis__Asset_Information__c.genesis__Market_Value__c</summarizedField>
    <summaryForeignKey>genesis__Asset_Information__c.genesis__Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>