force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Broker_Points__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Broker_Points__c</fullName>
    <description>This field aggregates the Points Amount of Points Type Broker.</description>
    <inlineHelpText>This field aggregates the Points Amount of Points Type Broker.</inlineHelpText>
    <label>Total Broker Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>