force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Monthly_Income_Of_All_Borrowers__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Monthly_Income_Of_All_Borrowers__c</fullName>
    <description>This field will contain the total monthly income all borrowers in the application.</description>
    <inlineHelpText>This field will contain the total monthly income all borrowers in the application.</inlineHelpText>
    <label>Total Monthly Income Of All Borrowers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>