force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Monthly_Payments__c</fullName>
    <description>This field will contain the total monthly payment amount from all liabilities of all borrowers.</description>
    <inlineHelpText>This field will contain the total monthly payment amount from all liabilities of all borrowers.</inlineHelpText>
    <label>Total Monthly Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>