force-app/main/default/objects/genesis__Applications__c/fields/genesis__Vendor__c.field-meta.xml
<CustomField>
    <fullName>genesis__Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is lookup to the Vendor account</description>
    <inlineHelpText>This field is lookup to the Vendor account</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>